--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "@types/jspdf": "^1.3.1",
+    "chart.js": "^2.9.3",
     "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "jspdf": "^1.5.3",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
